--- a/markup/components/categories-list/categories-list.styl
+++ b/markup/components/categories-list/categories-list.styl
@@ -1,5 +1,6 @@
 .categories-list
-  max-width 215px*1 + 20px*0
+  //max-width 215px*1 + 20px*0
+  max-width 100%
   margin 0 auto 10px
 
   &__inner
@@ -13,7 +14,7 @@
     color $gray-1
     font-size 15px
     line-height 1.25em
-    width calc(100% - 20px)
+    width calc(50% - 20px)
     margin 0 10px 20px
 
   &__item-inner
