--- a/markup/components/product-item/product-item.pug
+++ b/markup/components/product-item/product-item.pug
@@ -38,10 +38,11 @@ mixin product-item(item, category, slick)
           li 51% акрил
       footer.__footer
         .__price-box
-          if category !== 'new' && category !== 'no-old-price'
-            .__price._old !{item.price[0]}#[span.rouble a]
-            br
-          .__price !{item.price[1]}#[span.rouble a]
+          if item.available
+            if category !== 'new' && category !== 'no-old-price'
+              .__price._old !{item.price[0]}#[span.rouble a]
+              br
+            .__price !{item.price[1]}#[span.rouble a]
         if item.incart
           button.btn.btn_2.__status(type='button') #[span.btn__label В корзине]
         else if !item.available
