--- a/markup/components/products-list/products-list.styl
+++ b/markup/components/products-list/products-list.styl
@@ -82,6 +82,7 @@ $max-width-prod-list = 215px
 
   @media (min-width $screen-sm-min)
     max-width $max-width-prod-list*3 + 20px*2
+    margin 0
     .product-item
       width calc(100%/3 - 20px)
 
