--- a/markup/components/section-instagram/section-instagram.styl
+++ b/markup/components/section-instagram/section-instagram.styl
@@ -63,11 +63,17 @@
   @media (min-width $screen-sm-min)
     padding-left 45px
     padding-right 45px
+    margin-left -10px
+    margin-right -10px
 
     &__photo-list
       max-width 150px*5 + 20px*4
 
     &__photo-item
       width calc(100%/5 - 20px)
+
+  @media (min-width $screen-md-min)
+    margin-left 0
+    margin-right 0
 
 
