--- a/markup/components/slick-slider/slick-slider.styl
+++ b/markup/components/slick-slider/slick-slider.styl
@@ -32,5 +32,5 @@
       button
         background-color #bbb
 
-.slick-loading
-  visibility hidden !important
+img.slick-loading
+  visibility hidden
