--- a/markup/components/slider-main/slider-main.styl
+++ b/markup/components/slider-main/slider-main.styl
@@ -1,5 +1,5 @@
 .slider-main
-  height calc(50vh - 51px)
+  height 250px
   margin -20px -10px 0
   background-color #dddbdb
 
@@ -44,9 +44,8 @@
     right 0
     bottom 0
     left 0
-    background-image linear-gradient(to top, rgba(44, 44, 44, 0.45) 0%, transparent 100%)
     background-image linear-gradient(to top, rgba(#2c2c2c, 0.55) 0%, transparent 100%)
-    transition opacity 0.3s 0.1s linear
+    transition opacity 0.2s linear
     .loading &
       opacity 0
 
