--- a/markup/pages/card.pug
+++ b/markup/pages/card.pug
@@ -29,6 +29,7 @@ include ../components/counter/counter
                 {title: 'Пряжа ВВВ Zarra', url: pages.card.url}])
 
             article.-product-card
+              h1.__title.h2.hidden-md.hidden-lg Очень качественная пряжа BBB Zarra
               .row
                 .col-xs-12.col-sm-6
                   .-slider-product-card
@@ -100,7 +101,7 @@ include ../components/counter/counter
                           )
                 .col-xs-12.col-sm-6.-product-card.__col._2
                   header.-product-card.__header
-                    h1.__title.h2 Очень качественная пряжа BBB Zarra
+                    h1.__title.h2.hidden-xs.hidden-sm Очень качественная пряжа BBB Zarra
                     .__options
                       button.btn.icon-heart-empty.__favorites(type='button' title='В избранное')
                       button.btn.gly.gly-graph.__graph(type='button' title='')
@@ -135,25 +136,25 @@ include ../components/counter/counter
                       .col-xs-12.col-md-9.col-lg-7
                         ul.-prms
                           li.__item
-                            .__col._1 Вес (гр)
-                            .__col._2
-                            .__col._3 50
+                            span.__col._1 Вес (гр)
+                            span.__col._2
+                            span.__col._3 50
                           li.__item
-                            .__col._1 Длина (м)
-                            .__col._2
-                            .__col._3 90
+                            span.__col._1 Длина (м)
+                            span.__col._2
+                            span.__col._3 90
                           li.__item
-                            .__col._1 Состав
-                            .__col._2
-                            .__col._3 49% мериносовая шерсть; 51% акрил
+                            span.__col._1 Состав
+                            span.__col._2
+                            span.__col._3 49% мериносовая шерсть; 51% акрил
                           li.__item
-                            .__col._1 Рекомендуемый размер спиц
-                            .__col._2
-                            .__col._3 50
+                            span.__col._1 Рекомендуемый размер спиц
+                            span.__col._2
+                            span.__col._3 50
                           li.__item
-                            .__col._1 Производитель
-                            .__col._2
-                            .__col._3 Италия
+                            span.__col._1 Производитель
+                            span.__col._2
+                            span.__col._3 Италия
 
                   .__content-item.tab-pane.fade(id="reviews")
                     p Отзывы...
