--- a/markup/components/advantages/advantages.styl
+++ b/markup/components/advantages/advantages.styl
@@ -2,6 +2,7 @@
   display flex
   flex-flow row wrap
   padding 10px 0
+  margin 0 auto
 
   &__item
     flex none
@@ -37,8 +38,16 @@
     margin 0
 
   @media (min-width 600px)
+    max-width 600px
+
     &__item
       width 50%
+
+  @media (min-width $screen-sm-min)
+    max-width 600px
+
+  @media (min-width $screen-md-min)
+    max-width none
 
   @media (min-width $screen-lg-min)
     padding 20px 0
