--- a/markup/components/counter/counter.styl
+++ b/markup/components/counter/counter.styl
@@ -11,6 +11,9 @@
     square 38px
     background-color white
     border 1px solid #e5e5e5
+    &:hover, &:focus
+      color $green-1
+      border-color $green-1
 
     &_dec
       border-radius 2px 0 0 2px
