--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -82,9 +82,9 @@
     width 40px
     height 40px
     margin-right 5px
-    font-size 17px
+    font-size 20px
     line-height 1em
-    border 1px solid #d4d4d4
+    border 1px solid transparent
     border-radius 2px
     color $green-1
     position relative
@@ -104,7 +104,7 @@
       transition inherit
     &:hover, &:focus
       color $green-2
-      border-color #c6c6c6
+      border-color transparent
       &:before
         border-color $green-2
     &_active
@@ -120,9 +120,9 @@
     width 40px
     height 40px
     margin-right -5px
-    font-size 17px
+    font-size 20px
     line-height 1em
-    border 1px solid #d4d4d4
+    border 1px solid transparent
     border-radius 2px
     color $brown-1
     position relative
@@ -142,7 +142,7 @@
       transition inherit
     &:hover, &:focus
       color $brown-2
-      border-color #c6c6c6
+      border-color transparent
       &:before
         border-color $brown-2
     &_active
