--- a/markup/components/section/section.styl
+++ b/markup/components/section/section.styl
@@ -25,8 +25,16 @@
     & {$p}__title-inner
       overflow hidden
 
+  @media (min-width $screen-sm-min)
+    &_1
+      & {$p}__header
+        max-width 685px
+
   @media (min-width $screen-md-min)
     &_1
+      & {$p}__header
+        max-width none
+
       & {$p}__title
         &:before, &:after
           width 80px
