--- a/markup/components/menu-catalogue/menu-catalogue.styl
+++ b/markup/components/menu-catalogue/menu-catalogue.styl
@@ -152,8 +152,6 @@
             &, &:hover, &:focus
               color $green-6
               background-color white
-              &:before
-                //border-right-color $green-1
 
       &_lvl_2
         position relative
@@ -180,6 +178,7 @@
       &_lvl_1
         padding 16px 15px
         background-color #6f9d39
+        cursor default
         &:hover, &:focus
           background-color #6f9d39
 
