--- a/markup/components/section-instagram/section-instagram.styl
+++ b/markup/components/section-instagram/section-instagram.styl
@@ -1,6 +1,6 @@
 .section-instagram
   padding 30px 15px
-  margin-bottom 20px
+  margin 0 -10px 20px
   background-color #f5f3f3
 
   &__header
@@ -63,8 +63,6 @@
   @media (min-width $screen-sm-min)
     padding-left 45px
     padding-right 45px
-    margin-left -10px
-    margin-right -10px
 
     &__photo-list
       max-width 150px*5 + 20px*4
@@ -75,5 +73,3 @@
   @media (min-width $screen-md-min)
     margin-left 0
     margin-right 0
-
-
