--- a/markup/components/filters/filters.styl
+++ b/markup/components/filters/filters.styl
@@ -1,5 +1,6 @@
 .filters
   color #747474
+  max-width 300px
   .aside__header
     margin -1px -1px 0
     cursor pointer
@@ -57,12 +58,12 @@
 
     &__section
       flex none
-      width 50%
-      &+&_btns
-        border-top 1px solid #e5e5e5
+      width 100%
+      //&+&_btns
+        //border-top 1px solid #e5e5e5
 
-      &_btns
-        align-items flex-end
+      //&_btns
+        //align-items flex-end
 
   @media (min-width $screen-md-min)
     .aside__header
