--- a/markup/pages/catalogue.pug
+++ b/markup/pages/catalogue.pug
@@ -39,7 +39,7 @@ include ../components/pagination/pagination
                       src='static/img/content/categories-list/200x200/21701-200x200.jpg'
                       srcset='static/img/content/categories-list/200x200/21701-200x200.jpg 1x, static/img/content/categories-list/400x400/21701-400x400.jpg 1.25x'
                       alt='' title='' data-object-fit='contain' onload='objectFit(this)')
-                    figcaption.__caption
+                    figcaption.__caption Риолис
                 figure.__item
                   +a().__item-inner
                     .__item-img-wrap
@@ -47,7 +47,7 @@ include ../components/pagination/pagination
                       src='static/img/content/categories-list/200x200/Алиса-главная-1-200x200.jpg'
                       srcset='static/img/content/categories-list/200x200/Алиса-главная-1-200x200.jpg 1x, static/img/content/categories-list/400x400/Алиса-главная-1-400x400.jpg 1.25x'
                       alt='' title='' data-object-fit='contain' onload='objectFit(this)')
-                    figcaption.__caption
+                    figcaption.__caption Алиса
                 figure.__item
                   +a().__item-inner
                     .__item-img-wrap
@@ -55,7 +55,7 @@ include ../components/pagination/pagination
                       src='static/img/content/categories-list/200x200/runo-200x200.jpg'
                       srcset='static/img/content/categories-list/200x200/runo-200x200.jpg 1x, static/img/content/categories-list/400x400/runo-400x400.jpg 1.25x'
                       alt='' title='' data-object-fit='contain' onload='objectFit(this)')
-                    figcaption.__caption
+                    figcaption.__caption Золотое руно
                 figure.__item
                   +a().__item-inner
                     .__item-img-wrap
@@ -63,7 +63,7 @@ include ../components/pagination/pagination
                       src='static/img/content/categories-list/200x200/logo-rto-1-200x200.jpg'
                       srcset='static/img/content/categories-list/200x200/logo-rto-1-200x200.jpg 1x, static/img/content/categories-list/400x400/logo-rto-1-400x400.jpg 1.25x'
                       alt='' title='' data-object-fit='contain' onload='objectFit(this)')
-                    figcaption.__caption
+                    figcaption.__caption RTO
                 figure.__item
                   +a().__item-inner
                     .__item-img-wrap
