--- a/markup/components/footer/footer.styl
+++ b/markup/components/footer/footer.styl
@@ -49,7 +49,16 @@
     font-size 17px
     font-weight 400
     line-height 1.25
+    text-align center
     margin 0 0 30px
+
+    &_2
+      display none
+
+  &__contacts
+    text-align center
+    max-width 320px
+    margin 0 auto
 
   &__tel
     color #747474
@@ -82,6 +91,28 @@
       .grid__col
         &_1
           background-image url("footer-bg-sm@2x.jpg")
+
+  @media (min-width 541px)
+    &__title
+      text-align left
+
+      &_2
+        display block
+
+    &__developer
+      margin 21px auto
+
+  @media (min-width 541px)
+    &__top
+      .grid__col
+        &_3
+          padding-top 30px
+
+    &__contacts
+      text-align left
+      max-width none
+      margin-left 0
+      margin-right 0
 
   @media (min-width $screen-sm-min)
     .social-networks
