--- a/markup/components/grid/grid.styl
+++ b/markup/components/grid/grid.styl
@@ -11,15 +11,15 @@
     & {$p}__col
       padding 0 10px
 
-  @media (min-width $screen-sm-min)
+  @media (min-width 541px)
     &_2
       & {$p}__col
         &_2, &_3
           float left
         &_2
-          width percentage(6/12)
+          width percentage(7/12)
         &_3
-          width percentage(6/12)
+          width percentage(5/12)
 
   @media (min-width $screen-md-min)
     &_1
