--- a/markup/components/menu-foot/menu-foot.styl
+++ b/markup/components/menu-foot/menu-foot.styl
@@ -4,7 +4,8 @@
   color #474747
   font-size 14px
   line-height (18/14)em
-  margin-bottom -15px
+  max-width 320px
+  margin 0 auto -15px
 
   &__item
     padding-bottom 15px
@@ -16,3 +17,8 @@
     &:hover, &:focus
       color $green-1
       text-decoration none
+
+  @media (min-width 541px)
+    max-width none
+    margin-left 0
+    margin-right 0
