--- a/markup/components/pay-systems/pay-systems.styl
+++ b/markup/components/pay-systems/pay-systems.styl
@@ -1,7 +1,7 @@
 .pay-systems
   display flex
   flex-flow row wrap
-  justify-content flex-start
+  justify-content center
   align-items center
 
   &__item
@@ -13,3 +13,6 @@
 
     &_master-card
       width 42px
+
+  @media (min-width 541px)
+    justify-content flex-start
