--- a/markup/components/product-card/product-card.styl
+++ b/markup/components/product-card/product-card.styl
@@ -14,6 +14,7 @@
   &__header
     display flex
     align-items flex-start
+    justify-content center
     margin-bottom rem-calc(20)
 
   &__title
@@ -46,6 +47,7 @@
       color #575757
 
   &__has
+    text-align center
     margin 0 0 20px
 
   &__has-icon
@@ -99,6 +101,12 @@
       margin-bottom 30px
 
   @media (min-width $screen-sm-min)
+    &__header
+      justify-content flex-start
+
+    &__has
+      text-align left
+
     &__prices
       text-align left
 
