--- a/markup/components/filters/filters.pug
+++ b/markup/components/filters/filters.pug
@@ -5,7 +5,7 @@ mixin filters()
   // Filters
   aside.-filters.aside&attributes(attributes)
     header.aside__header
-      h3.aside__title Подобрать товар
+      h3.aside__title #[span.aside__title-icon.icon-left-open-1.hidden-md.hidden-lg]Подобрать товар
     .__hidden
       form.__form(action='')
         .__section
