--- a/markup/components/filters/filters.styl
+++ b/markup/components/filters/filters.styl
@@ -1,9 +1,13 @@
 .filters
   color #747474
-  max-width 300px
   .aside__header
     margin -1px -1px 0
     cursor pointer
+
+  .aside__title-icon
+    display inline-block
+    vertical-align top
+    margin-right 10px
 
   &.aside
     padding 0
@@ -49,6 +53,12 @@
 
   &__hidden
     display none
+    overflow-y auto
+    width 210px
+    position fixed
+    top 51px
+    bottom 0
+    left 0
 
 
   @media (min-width 640px)
@@ -92,5 +102,6 @@
       box-shadow 0 1px 10px rgba(80, 80, 80, 0.31)
 
     &__hidden
-      display block !important
-      height auto !important
+      overflow-y visible
+      width auto
+      position static
